--- a/src/pug/produkt-vypis.pug
+++ b/src/pug/produkt-vypis.pug
@@ -18,7 +18,7 @@ html(lang=lang)
                         .page-heading-inner
                             img(src="/img/nav-img.svg")
                             span
-                                h1 RUČNÍ NÝTOVAČE
+                                h1 Ruční nýtovače
                                 div(id="pageDescription") 
                                     p Jednoduchý, často velmi podceňovaný předmět, který však může spojit funkčnost s krásným vzhledem a být tak nejen velmi užitečný... #[span.read-more(id="readMore") Číst více]
                                     
@@ -43,8 +43,7 @@ html(lang=lang)
                                         a.subcategories__link(href="/produkt-vypis.html") 
                                             .subcategories__img
                                                 img.lazyload(src="/img/load-symbol.svg" data-src="/img/product-thumb-small.jpg" alt="Krabice na alkohol" title="Krabice na alkohol" width="46" height="46")
-                                            .subcategories__title 2-STUPŇOVÝ RUČNÍ NÝTOVAČ
-
+                                            .subcategories__title 2-stupňový ruční nýtovač
 
                 section.bestsellers
                     .container
@@ -54,7 +53,7 @@ html(lang=lang)
                                 .bestsellers-single-img
                                     img(src="/img/product-thumb-medium.jpg")
                                 .bestsellers-single-content
-                                    p 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY
+                                    p 2-stupňový ruční nýtovač
                                     .bestsellers-single-bottom 
                                         span Skladem
                                         strong od 742 Kč
@@ -62,7 +61,7 @@ html(lang=lang)
                                 .bestsellers-single-img
                                     img(src="/img/product-thumb-medium.jpg")
                                 .bestsellers-single-content
-                                    p 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY
+                                    p 2-stupňový ruční nýtovač
                                     .bestsellers-single-bottom 
                                         span Skladem
                                         strong od 742 Kč
@@ -70,7 +69,7 @@ html(lang=lang)
                                 .bestsellers-single-img
                                     img(src="/img/product-thumb-medium.jpg")
                                 .bestsellers-single-content
-                                    p 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY
+                                    p 2-stupňový ruční nýtovač
                                     .bestsellers-single-bottom 
                                         span Skladem
                                         strong od 742 Kč
