--- a/src/scss/components/_product-card.scss
+++ b/src/scss/components/_product-card.scss
@@ -83,6 +83,7 @@
     margin: 0;
     padding: 20px 0;
     color: $gray-900;
+    text-transform: uppercase;
 }
 .product-card__bottom{
     width:100%;
