--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -812,3 +812,9 @@ section.bestsellers{
     text-align: right;
     padding-right: 10px;
 }
+@media screen and (max-width: 991px){
+    .bestsellers-grid{
+        grid-template-columns: 1fr;
+        grid-gap: 10px;
+    }
+}
