--- a/src/pug/ucet-historie.pug
+++ b/src/pug/ucet-historie.pug
@@ -39,10 +39,11 @@ html(lang=lang)
 
                                         
                                     tr.order-history__item-detail
-                                        td(colspan="5") 
+                                        td(colspan="5")
                                             table 
                                                 tr
-                                                    td
+                                                    td(colspan="2")
+                                                        img(src="/img/product-thumb-large.jpg" alt="#")
                                                         a(href="#") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY lorem ipsum
                                                     td 
                                                         span 3 ks
@@ -50,9 +51,11 @@ html(lang=lang)
                                                         span 5 999 Kč
                                                     td 
                                                         span.--status 3/3 odesláno
+
                                                 tr
-                                                    td
-                                                        a(href="#") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY lorem ipsum
+                                                    td(colspan="2")
+                                                        img(src="/img/product-thumb-large.jpg" alt="#")
+                                                        a(href="#") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ
                                                     td 
                                                         span 3 ks
                                                     td
@@ -60,8 +63,15 @@ html(lang=lang)
                                                     td 
                                                         span.--status 2/3 odesláno
 
-                
+                                                tr
 
+                                                    td(colspan="5")
+                                                        .order-history__files
+                                                            a(href="#") faktura_148945.pdf 
+                                                            a(href="#") faktura_148945.pdf 
+                                                            a(href="#") faktura_148945.pdf 
+
+  
                                     tr.order-history__item(id="detail-2") 
                                         td 1. 1. 1970
                                         td 1598879
@@ -71,10 +81,11 @@ html(lang=lang)
 
                                         
                                     tr.order-history__item-detail
-                                        td(colspan="5") 
+                                        td(colspan="5")
                                             table 
                                                 tr
-                                                    td
+                                                    td(colspan="2")
+                                                        img(src="/img/product-thumb-large.jpg" alt="#")
                                                         a(href="#") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY lorem ipsum
                                                     td 
                                                         span 3 ks
@@ -82,9 +93,11 @@ html(lang=lang)
                                                         span 5 999 Kč
                                                     td 
                                                         span.--status 3/3 odesláno
+
                                                 tr
-                                                    td
-                                                        a(href="#") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY lorem ipsum
+                                                    td(colspan="2")
+                                                        img(src="/img/product-thumb-large.jpg" alt="#")
+                                                        a(href="#") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ
                                                     td 
                                                         span 3 ks
                                                     td
@@ -92,6 +105,13 @@ html(lang=lang)
                                                     td 
                                                         span.--status 2/3 odesláno
 
+                                                tr
+
+                                                    td(colspan="5")
+                                                        .order-history__files
+                                                            a(href="#") faktura_148945.pdf 
+                                                            a(href="#") faktura_148945.pdf 
+                                                            a(href="#") faktura_148945.pdf 
 
         
         include components/_footer.pug
