--- a/src/scss/components/_order-history.scss
+++ b/src/scss/components/_order-history.scss
@@ -52,6 +52,7 @@
 }
 .order-history__item-detail td:first-child{
     padding-left: 10px;
+    max-width: 300px;
 }
 .order-history span{
     display: flex;
