--- a/src/pug/components/_modal-ppl.pug
+++ b/src/pug/components/_modal-ppl.pug
@@ -7,8 +7,8 @@
 
 
         .modal__content(id="modal-ppl-content")
-
-            button.modal__close(aria-label="Close modal" data-micromodal-close)
+            .modal__header
+                button.modal__close(aria-label="Close modal" data-micromodal-close)
 
 
             #ppl-parcelshop-map
