--- a/src/pug/kosik-3.pug
+++ b/src/pug/kosik-3.pug
@@ -37,7 +37,7 @@ html(lang=lang)
 
                                 .cart-table__title Fakturační údaje
                                 .cart-table-personal
-                                    a.cart-table-personalAcc(href="#")
+                                    a.cart-table-personalAcc(href="/uzivatelsky-ucet")
                                         img(src="/img/icons/user.svg")
                                         p Své fakturační údaje můžete zobrazit v uživatelském účtu
                                         span.btn.btn-secondary Zobrazit údaje
