--- a/src/scss/components/_cart-content.scss
+++ b/src/scss/components/_cart-content.scss
@@ -242,6 +242,7 @@
     background: white;
     padding: 2px 8px;
     cursor: pointer;
+    color: $gray-900;
 }
 .cart-table__export-group .item:hover{
     box-shadow: 0px 3px 8px 0px rgba(0,0,0,.05);
