--- a/src/pug/kosik-1.pug
+++ b/src/pug/kosik-1.pug
@@ -53,8 +53,8 @@ html(lang=lang)
                                                         span.plus +
                                                     
                                                     .cart-item-prices 
-                                                        .cart-item-price-pc #[span 52.20] Kč/ks
-                                                        .cart-item-price #[span 52.20] Kč
+                                                        .cart-item-price-pc #[span 520] Kč/ks
+                                                        .cart-item-price #[span 520] Kč
 
 
 
@@ -74,8 +74,8 @@ html(lang=lang)
                                                         span.plus +
                                                     
                                                     .cart-item-prices 
-                                                        .cart-item-price-pc #[span 52.20] Kč/ks
-                                                        .cart-item-price #[span 52.20] Kč
+                                                        .cart-item-price-pc #[span 520] Kč/ks
+                                                        .cart-item-price #[span 520] Kč
 
 
                                         .cart-item.--unavailable
@@ -94,8 +94,8 @@ html(lang=lang)
                                                         span.plus +
                                                     
                                                     .cart-item-prices 
-                                                        .cart-item-price-pc #[span 52.20] Kč/ks
-                                                        .cart-item-price #[span 52.20] Kč
+                                                        .cart-item-price-pc #[span 100] Kč/ks
+                                                        .cart-item-price #[span 100] Kč
 
 
                                 .cart-table__footer.--step1
@@ -103,10 +103,10 @@ html(lang=lang)
                                     .cart-table__footerSummary
                                         .cart-table__footerSummary-row
                                             span Cena bez DPH:
-                                            span #[span(id="goodsprice") 3354] Kč
+                                            span #[span(id="goodsprice") 1140] Kč
                                         .cart-table__footerSummary-row
                                             span Cena včetně DPH
-                                            span 3 354 Kč
+                                            span #[span(id="goodspriceDPH") 1379] Kč 
 
 
                                     .cart-table__footerSplit
