--- a/src/scss/components/_cart-content.scss
+++ b/src/scss/components/_cart-content.scss
@@ -459,6 +459,7 @@
 .cart-aside__table-row:last-child .cart-aside__table-td{
     color: $gray-500;
     font-size: 13px;
+    font-weight: 400;
 }
 .cart-aside__free-shipping{
     background: rgba($green-500,0.1);
