--- a/src/pug/components/_product-card-unavailable.pug
+++ b/src/pug/components/_product-card-unavailable.pug
@@ -42,7 +42,7 @@
                     span.minus –
                     input(id="qty-stepper-input" type="number" value="1" min="1" max="100" step="1" aria-label="Počet položek" required) 
                     span.plus +
-                .btn.product-card__btn #[img(src="/img/icons/cart-green.svg" alt="Do košíku")] Do košíku
+                button.btn.product-card__btn #[img(src="/img/icons/cart-green.svg" alt="Do košíku")] Do košíku
 
             .product-card__code Kód produktu: 1DH5G6
             
