--- a/src/pug/produkt-detail.pug
+++ b/src/pug/produkt-detail.pug
@@ -87,47 +87,20 @@ html(lang=lang)
                                         div EAN: #[span(id="product-code") 76564160265]
 
                                     p.product-detail__text Jednoduchý, často velmi podceňovaný předmět, který však může spojit funkčnost s krásným vzhledem a být tak nejen velmi užitečný#[a(href="#productDescription") Číst více]
-                                    form.product-detail__form(method="post")
-                                        .variants(id="variants")
-                                            .variants__title Výběr varianty
-            
-                                            .variants__list-wrap
-                                                .variants__list
-
-                                                    .variants__item.default.--active(data-code="Zvolte variantu" data-stockstatus="default" data-stock="Zvolte variantu" data-priceold="od 1 500 Kč" data-price="od 1 200 Kč" data-pricevat="od 923 Kč") 
-                                                        input(type="radio" name="variant-empty" id="variantId" value="123" aria-label="Zvolte variantu" required)
-                                                        .variants__item-text Zvolte variantu
-
-                                                    .variants__item(data-code="1" data-stockstatus="active" data-stock="Skladem 10ks" data-priceold="1 500 Kč" data-price="1 200 Kč" data-pricevat="923 Kč") 
-                                                        input(type="radio" name="variant" id="variantId1" value="123" aria-label="Černý lak + prosklená dvířka" required)
-                                                        img(src="/img/logo.svg" alt="Černý lak + prosklená dvířka" data-src="/img/product-thumb-large.jpg")
-                                                        .variants__item-text Černý lak + prosklená dvířka
-
-                                                    .variants__item(data-code="2" data-stockstatus="disabled" data-stock="Nedostupné" data-priceold="150 Kč" data-price="100 Kč" data-pricevat="80 Kč") 
-                                                        input(type="radio" name="variant" id="variantId2" value="123" aria-label="Zelená barva s neprůhlednými dvířky" required)
-                                                        img(src="/img/product-thumb-small.jpg" alt="Zelená barva s neprůhlednými dvířky" data-src="/img/product-thumb-large.jpg")
-                                                        .variants__item-text Zelená barva s neprůhlednými dvířky
+                                    .product-detail__form(method="post")
 
 
-                                                    .variants__item(data-code="3" data-stockstatus="disabled" data-stock="Nedostupné" data-price="1000 Kč" data-pricevat="800 Kč") 
-                                                        input(type="radio" name="variant" id="variantId3" value="123" aria-label="Zelená barva" required)
-                                                        img(src="/img/product-thumb-small.jpg" alt="Zelená barva" data-src="/img/product-thumb-large.jpg")
-                                                        .variants__item-text Zelená barva
 
-
-                                        .product-detail__stock(id="stock" data-status="default") Pro dostupnost zvolte variantu    
+                                        .product-detail__stock(id="stock" data-status="default") Skladem na eshopu
 
                                         .product-detail__price 
                                             .product-detail__priceMain #[span(id="price-old") od 1 200 Kč] #[span(id="price-main") od 1 118 Kč]
                                             .product-detail__priceVAT #[span(id="price-vat") od 923,97 Kč] bez DPH
 
                                         .product-detail__cta 
-                                            .product-detail__qty.stepper(id="qty-stepper" ) 
-                                                span.minus –
-                                                input(id="qty-stepper-input" type="number" value="1" min="1" max="100" step="1" aria-label="Počet položek" required) 
-                                                span.plus +
+
                                             .product-detail__button 
-                                                button.btn.--green(name="add-to-cart") #[img(src="/img/icons/cart-white.svg" alt="Vložit do košíku")] Koupit nyní
+                                                a.btn.--green(href="#" name="add-to-cart") #[img(src="/img/icons/cart-white.svg" alt="Vložit do košíku")] Koupit nyní
 
                         .tab.product-detail__tab
                             button.tablinks.active(onclick="openTab(event, '1')") Popis a Parametry
