--- a/src/pug/components/_header.pug
+++ b/src/pug/components/_header.pug
@@ -34,15 +34,19 @@ header
                         img(src="/img/icons/user.svg" alt="Přihlášení")
                     div.user__title
 
-                //   
-                    .user.--active(id="userToggle")
-                        .user__icon
-                            img(src="/img/icons/user.svg" alt="Přihlášení")
-                        .user__wrap
-                            .user__title Petr Novák
-                        .user__dropdown(id="userDropdown")
-                            a(href="/uzivatelsky-ucet.html") Uživatelský účet
-                            a(href="/") Odhlásit
+                  
+                .user.--active(id="userToggle")
+                    .user__icon
+                        img(src="/img/icons/user.svg" alt="Přihlášení")
+                    .user__wrap
+                        .user__title Petrllorem Novákloremips
+                    .user__dropdown(id="userDropdown")
+                        a(href="/uzivatelsky-ucet.html") Uživatelský účet
+                        a(href="/oblibene-produkty.html") Oblíbené produkty
+                        a(href="/ucet-historie.html") Historie objednávek
+                        a(href="/ucet-produkty.html") Poslední produkty
+                        a(href="/ucet-faktury.html") Přehled dokumentů
+                        a(href="/#") Odhlásit
 
 
                             
