--- a/src/pug/components/_product-card-fav.pug
+++ b/src/pug/components/_product-card-fav.pug
@@ -49,4 +49,5 @@
                 button.btn.product-card__btn #[img(src="/img/icons/cart-green.svg" alt="Do košíku")] Do košíku
 
             .product-card__code Kód produktu: 1DH5G6
-            
+
+            a.product-card__removefav(href="#") Odstranit z oblíbených            
