--- a/src/scss/components/_page.scss
+++ b/src/scss/components/_page.scss
@@ -44,7 +44,7 @@
         padding-top: 0;
         border: 0;
         margin-bottom: 0;
-        padding: 0;
+        padding: 0 10px;
         box-shadow: 0;
         border: 0;
     }
