--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -184,13 +184,23 @@ header{
     position: relative;
     background: rgba($white,0.1);
     min-width: 48px;
+    max-width: 180px;
+}
+.header-nav .user.--active{
+    justify-content: flex-start;    
 }
 .header-nav .user.--active .user__title{
-    font-weight: 500;
+    font-weight: 400;
+    padding: 0 10px 0 0;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    line-height: 1.2;
 }
 .header-nav .user__wrap{
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 .header-nav .user__title{
     color: $white;
@@ -204,11 +214,12 @@ header{
     background: transparent;
     border-radius: 50%;
     height: 48px;
-    width: 48px;
     width: auto;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0 10px;
+    flex-shrink: 0;
 }
 .header-nav .user__icon img{
     height: 20px;
@@ -220,7 +231,7 @@ header{
     margin-top: 10px;
     top: 100%;
     left: 0;
-    z-index: 1;
+    z-index: 9;
     display: flex;
     flex-direction: column;
     width: 220px;
