--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -818,3 +818,22 @@ section.bestsellers{
         grid-gap: 10px;
     }
 }
+
+
+.product-card__removefav{
+    color: $red-500;
+    background: rgba($red-500,0.1);
+    width: 100%;
+    height: 48px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+.header-nav .user__dropdown{
+    padding-bottom: 0;
+}
+.header-nav .user__dropdown a:last-child{
+    border-top: 1px solid $gray-300;
+}
