--- a/src/pug/components/_header.pug
+++ b/src/pug/components/_header.pug
@@ -41,6 +41,7 @@ header
                     .user__wrap
                         .user__title Petrllorem Novákloremips
                     .user__dropdown(id="userDropdown")
+                        a.--bold(href="/login-splashscreen-alt.html") Změnit firmu
                         a(href="/uzivatelsky-ucet.html") Uživatelský účet
                         a(href="/oblibene-produkty.html") Oblíbené produkty
                         a(href="/ucet-historie.html") Historie objednávek
