--- a/src/pug/template/_head.pug
+++ b/src/pug/template/_head.pug
@@ -55,6 +55,7 @@ head
 	script(src="https://www.ppl.cz/sources/map/main.js" async defer)
 	link(href="https://www.ppl.cz/sources/map/main.css" rel="stylesheet")
 
+	link(href="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/css/swiffy-slider.min.css" rel="stylesheet" crossorigin="anonymous")
 
 	script.
 		/*
