--- a/src/pug/template/_scripts.pug
+++ b/src/pug/template/_scripts.pug
@@ -5,7 +5,10 @@ script(src="/js/lazysizes.min.js")
 script(src="/js/instant.page.min.js")
 script(src="/js/siema.min.js")
 
+script(src="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/js/swiffy-slider.min.js" crossorigin="anonymous" defer)
+
 script(src="/js/scripts.js")
+
 
 
 
