--- a/src/pug/produkt-detail.pug
+++ b/src/pug/produkt-detail.pug
@@ -76,6 +76,7 @@ html(lang=lang)
                                         #productGalleryModal.modal.fade(tabindex='-1' aria-labelledby='exampleModalLabel' aria-hidden='true')
                                             #productGalleryBackdrop
                                             .modal-dialog.modal-dialog-centered.modal-fullscreen
+                                                #productGalleryClose Zavřít
                                                 .modal-content
                                                     .modal-body
                                                         #pgalleryModal.swiffy-slider.h-100.slider-nav-dark
