--- a/src/pug/kosik-1.pug
+++ b/src/pug/kosik-1.pug
@@ -56,6 +56,9 @@ html(lang=lang)
                                                         .cart-item-price-pc #[span 520] Kč/ks
                                                         .cart-item-price #[span 520] Kč
 
+                                                    a.cart-item-remove(data-no-instant="" href="/kosik?delete=2289|2255")
+                                                        .cart-item-remove-icon
+                                                            img(src="/img/icons/cross-alt.svg" alt="Odstranit z košíku")
 
 
                                         .cart-item 
@@ -77,6 +80,11 @@ html(lang=lang)
                                                         .cart-item-price-pc #[span 520] Kč/ks
                                                         .cart-item-price #[span 520] Kč
 
+                                                    a.cart-item-remove(data-no-instant="" href="/kosik?delete=2289|2255")
+                                                        .cart-item-remove-icon
+                                                            img(src="/img/icons/cross-alt.svg" alt="Odstranit z košíku")
+
+
 
                                         .cart-item.--unavailable
                                             .cart-item-thumb-wrap
@@ -96,6 +104,10 @@ html(lang=lang)
                                                     .cart-item-prices 
                                                         .cart-item-price-pc #[span 100] Kč/ks
                                                         .cart-item-price #[span 100] Kč
+
+                                                    a.cart-item-remove(data-no-instant="" href="/kosik?delete=2289|2255")
+                                                        .cart-item-remove-icon
+                                                            img(src="/img/icons/cross-alt.svg" alt="Odstranit z košíku")
 
 
                                 .cart-table__footer.--step1
