--- a/src/scss/components/_cart-content.scss
+++ b/src/scss/components/_cart-content.scss
@@ -18,7 +18,7 @@
 }
 .cart-container--narrow .cart-table{
     width: 100%;
-    max-width: 840px;
+    max-width: 940px;
 }
 .cart-container--narrow .cart-table__title{
     text-align: center;
@@ -107,7 +107,6 @@
     display: flex;
     padding-bottom: 0px;
     align-items: center;
-    flex-wrap: wrap;
     gap: 10px;
 }
 .cart-item-name{
@@ -143,8 +142,10 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    justify-content: center;   
+    justify-content: center; 
+    flex-shrink: 0;  
 }
+
 .cart-item-price-pc{
     color: $gray-500;
     flex-shrink: 0;
@@ -172,17 +173,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 40px;
+    margin-left: 20px;
 }
 .cart-item-remove-icon{
     background: $gray-100;
-    height: 28px;
-    width: 28px;
+    height: 26px;
+    width: 26px;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: 10px;
 }
 .cart-item-remove-icon img{
 
@@ -246,6 +246,19 @@
 }
 .cart-table__export-group .item:hover{
     box-shadow: 0px 3px 8px 0px rgba(0,0,0,.05);
+}
+@media screen and (min-width: 992px){
+    .cart-item-stepper{
+        flex-shrink: 0;
+      }
+      .cart-item-name{
+
+      }
+}
+@media screen and (max-width: 991px){
+    .cart-item-main{
+        flex-wrap: wrap;
+    }
 }
 @media screen and (max-width: 575px){
     .cart-item {
